--- a/styles/style.css
+++ b/styles/style.css
@@ -125,6 +125,37 @@ main > section {
   gap: 19px;
 }
 
+/* Some Facts */
+.facts-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.fact-card {
+  border: 1px solid #ff900e;
+  width: 230px;
+  height: 230px;
+  border-radius: 8px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.fact-description {
+  max-width: 432px;
+}
+
+.fact-number {
+  font-size: 2.25rem;
+  font-weight: 600;
+  margin: 10px 0px 5px 0px;
+}
+
+.fact-name {
+  font-size: 1.1rem;
+  font-weight: 600;
+  margin-top: 10px;
+}
+
 /* Responsive media query */
 @media screen and (max-width: 576px) {
   .navbar,
