--- a/styles/style.css
+++ b/styles/style.css
@@ -156,16 +156,44 @@ main > section {
   margin-top: 10px;
 }
 
+/* Our sponsor related styles */
+.sponsor-info {
+  text-align: center;
+  max-width: 432px;
+  margin: 50px auto;
+}
+
+.sponsor-companies {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+}
+
+.sponsor-companies img {
+  filter: grayscale(100%);
+}
+
 /* Responsive media query */
+/* Small devices */
 @media screen and (max-width: 576px) {
   .navbar,
   .nav-links,
   .teams {
     flex-direction: column;
   }
-  .team-image-container {
+  .team-image-container,
+  .facts-container,
+  .sponsor-companies {
     grid-template-columns: repeat(1, 1fr);
   }
+  .facts-container {
+    justify-items: center;
+    gap: 24px;
+  }
+  .sponsor-companies {
+    justify-items: center;
+    gap: 50px;
+  }
+
   .our-feature {
     margin-left: 20px;
   }
@@ -179,5 +207,12 @@ main > section {
   }
   .our-feature {
     margin: 50px auto;
+  }
+
+  .sponsor-companies,
+  .facts-container {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px;
+    justify-items: center;
   }
 }
