--- a/styles/style.css
+++ b/styles/style.css
@@ -125,6 +125,30 @@ main > section {
   gap: 19px;
 }
 
+/* Feature section related styles */
+.features {
+  gap: 120px;
+}
+
+#feature-section-title {
+  border-left: 5px solid #ff900e;
+  padding-left: 20px;
+  /* margin-top: 0;
+  margin-bottom: 0; */
+}
+
+.feature-card {
+  padding: 30px;
+  box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+  margin-bottom: 20px;
+  border-radius: 8px;
+}
+
+.feature-card .feature-title {
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+
 /* Some Facts */
 .facts-container {
   display: grid;
