--- a/styles/style.css
+++ b/styles/style.css
@@ -137,6 +137,17 @@ main > section {
   margin-bottom: 0; */
 }
 
+#experience-badge {
+  padding: 40px 38px;
+  font-size: 1.25rem;
+  margin-left: -90px;
+  margin-top: -70px;
+}
+
+#experience-years {
+  font-size: 3.25rem;
+}
+
 .feature-card {
   padding: 30px;
   box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
@@ -201,13 +212,17 @@ main > section {
 @media screen and (max-width: 576px) {
   .navbar,
   .nav-links,
-  .teams {
+  .teams,
+  .features {
     flex-direction: column;
   }
   .team-image-container,
   .facts-container,
   .sponsor-companies {
     grid-template-columns: repeat(1, 1fr);
+  }
+  .featured-architect img {
+    width: 100%;
   }
   .facts-container {
     justify-items: center;
@@ -221,12 +236,18 @@ main > section {
   .our-feature {
     margin-left: 20px;
   }
+
+  #experience-badge {
+    margin-top: 20px;
+    margin-left: 20px;
+  }
 }
 
 /* medium sized devices */
 
 @media screen and (min-width: 576px) and (max-width: 992px) {
-  .teams {
+  .teams,
+  .features {
     flex-direction: column;
   }
   .our-feature {
@@ -238,5 +259,9 @@ main > section {
     grid-template-columns: repeat(2, 1fr);
     gap: 50px;
     justify-items: center;
+  }
+  #experience-badge {
+    margin-top: 20px;
+    margin-left: 20px;
   }
 }
